# DocQ-A

./: .dockerignore  .env.example  .gitignore  DEBUGGING_SUMMARY.md  DEBUG_GUIDE.md  DUPLICATE_DETECTION_FEATURE.md  Dockerfile  README.md  README_VISUALIZATION.md  STREAMLIT_README.md  VECTOR_STORE_VISUALIZATION.md  VISUALIZATION_QUICKSTART.md  VISUALIZATION_SUMMARY.md  cloudbuild.yaml  debug_config.json  debug_gemini.py  debug_streamlit.py  debug_upload.py  docker-compose.yml  explore_vector_store.py  project_notes.txt  pyproject.toml  quick_viz.py  requirements-ui.txt  requirements-viz.txt  run_app.py  streamlit_app.py  test_gemini_integration.py  test_gpu_support.py  test_ingestion.py  test_provider_switching.py  test_upload.py  visualize.bat  visualize_vector_store.py
.kiro/specs/document-qa-rag-agent/: design.md  requirements.md  tasks.md
.kiro/specs/production-readiness/: design.md  requirements.md
.streamlit/: config.toml
demo/: DEMO_QUESTIONS.md
examples/: embedding_demo.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/history/: ConversationHistory.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/pdf/: PDFViewer.tsx
frontend/src/components/qa/: AnswerCard.tsx  QuestionForm.tsx
frontend/src/components/ui/: Spinner.tsx  Toast.tsx
frontend/src/components/upload/: UploadZone.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useDocuments.ts  useHealth.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: uuid.ts
src/: __init__.py  answer_generator.py  app.py  config.py  debug_utils.py  embeddings.py  ingestion.py  interfaces.py  logging_config.py  models.py  qdrant_vector_store.py  query_engine.py  routes.py  ui_utils.py  vector_store.py
src/llm/: __init__.py  factory.py  gemini.py  ollama.py  openai.py
tests/: __init__.py  test_basic_setup.py  test_embedding_integration.py  test_embeddings.py  test_ingestion.py  test_ingestion_integration.py  test_qdrant_vector_store.py  test_vector_store.py  test_vector_store_abstraction.py
